<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/character_detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_close"
            app:title="@string/toolbar_title_character_detail"
            app:titleTextColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical"
            android:layout_gravity="top"
            android:gravity="top">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_character"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:contentDescription="@string/chacarter_detail_img"
                tools:src="@drawable/ic_person" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_end_detail_margin"
                android:layout_marginTop="@dimen/second_margin"
                android:layout_marginEnd="@dimen/start_end_detail_margin"
                android:layout_marginBottom="@dimen/normal_margin"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/desc_text"
                android:textStyle="normal"
                android:visibility="visible"
                tools:text="Esto es una descripcion para la imagen del character" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_end_detail_margin"
                android:layout_marginEnd="@dimen/start_end_detail_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                android:gravity="center"
                android:text="@string/title_character_detail"
                android:textColor="@color/black"
                android:textSize="@dimen/title_text"
                android:textStyle="normal" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_character_comics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_character_comics" />

        </LinearLayout>

    </LinearLayout>


</ScrollView>

